# model-registry

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.konflux  Dockerfile.odh  Dockerfile.testops  Makefile  OWNERS  README.md  RELEASE.md  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  rpms.in.yaml  rpms.lock.yaml  tilt-controller.dockerfile  tilt-ui.dockerfile  tilt.dockerfile  ubi.repo
.github/: dependabot.yml  renovate.json
.tekton/: README.md  mod-async-poc-pull-request.yaml  mod-async-poc-push.yaml  odh-model-registry-job-async-upload-pull-request.yaml  odh-model-registry-job-async-upload-push.yaml  odh-model-registry-job-async-upload-test2-pull-request.yaml  odh-model-registry-job-async-upload-test2-push.yaml  odh-model-registry-job-async-upload-v2-25-pull-request.yaml  odh-model-registry-job-async-upload-v2-25-push.yaml  odh-model-registry-job-async-upload-v3-0-push.yaml  odh-model-registry-job-async-upload-v3-2-push.yaml  odh-model-registry-job-async-upload-v3-3-push.yaml  odh-model-registry-job-async-upload-v3-4-ea-1-push.yaml  odh-model-registry-job-async-upload-v3-4-ea-2-pull-request.yaml  odh-model-registry-job-async-upload-v3-4-ea-2-push.yaml  odh-model-registry-job-async-upload-v3-4-pull-request.yaml  odh-model-registry-job-async-upload-v3-4-push.yaml  odh-model-registry-job-async-upload-v3-5-ea-1-pull-request.yaml  odh-model-registry-pull-request.yaml  (+39 more)
tools/csv-exporter/: Makefile  README.md  model_catalog_export.py  pyproject.toml
tools/csv-exporter/tests/: test_csv_compliance.py  test_export.py
(+451 files in other folders)
